# connected-vehicle-solana

./: .gitignore  README.md  environment.yml  requirements.txt
backend/: continuous_trust_updater.py  send_sol_to_vehicles.sh  sumo_realtime.py  test.py  vehicle_monitor.py
backend/rsu_wallets/: RSU_01_keypair.json  RSU_02_keypair.json  RSU_1_keypair.json  RSU_2_keypair.json  undefined_keypair.json
backend/trsutscore/: Untitled.ipynb
backend/vehicle_wallets/: veh00_keypair.json  veh100_keypair.json  veh10_keypair.json  veh11_keypair.json  veh12_keypair.json  veh14_keypair.json  veh15_keypair.json  veh16_keypair.json  veh17_keypair.json  veh18_keypair.json  veh19_keypair.json  veh1_keypair.json  veh20_keypair.json  veh21_keypair.json  veh22_keypair.json  veh23_keypair.json  veh24_keypair.json  veh25_keypair.json  veh26_keypair.json  veh27_keypair.json  veh28_keypair.json  veh29_keypair.json  veh2_keypair.json  veh30_keypair.json  veh31_keypair.json  veh32_keypair.json  veh33_keypair.json  veh34_keypair.json  veh35_keypair.json  veh36_keypair.json  veh37_keypair.json  veh38_keypair.json  (+64 more)
frontend/: package-lock.json  package.json
monitoring_results/: monitoring_data.json  monitoring_summary.json  performance_monitor.py  trust_score_data.json
solana-smart-contract/: .gitignore  Anchor.toml
solana-smart-contract/programs/platoon_manager/: Cargo.toml
solana-smart-contract/programs/platoon_manager/src/: lib.rs
solana-smart-contract/programs/platoon_manager/tests/: platoon_manager.ts
sumo/: osm.net.xml  osm.passenger.routes.xml  osm.poly.xml  osm.sumocfg
(+9 files in other folders)
