[package]
name = "platoon_manager"
version = "0.1.0"
description = "Platoon Manager"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "platoon_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
vehicle_node_chain = { path = "../vehicle_node_chain", features = ["cpi"] }
